<resources>

	<!-- General String -->
	<string name="app_name">RxAndroid/RetroLambda demo</string>

	<!-- Core fragment String -->
	<string name="fragment_core_click_button_text">Click counter example</string>
	<string name="fragment_core_edittext_button_text">EditText example</string>
	<string name="fragment_core_edittext_form_text">Form example</string>
	<string name="fragment_core_autocomplete_form_text">Autocomplete example</string>
	<string name="fragment_core_retrofit_button_text">RetroFit example</string>
	<string name="fragment_core_retrofit_bus_button_text">RetroFit-RxBus example</string>
	<string name="fragment_core_firebase_button_text">Firebase example</string>
	<string name="fragment_core_operator_button_text">Operators example</string>


	<!-- Click Counter fragment String -->
	<string name="fragment_click_counter_button_lambda_text">Lambda counter</string>
	<string name="fragment_click_counter_button_rxandroid_text">RxAndroid counter</string>


	<!-- EditText fragment String -->
	<string name="fragment_edittext_lambda_header">Using lambdas:</string>
	<string name="fragment_edittext_rxandroid_header">Using just RxAndroid:</string>
	<string name="fragment_edittext_edittext_hint">\"test\" postfix needed</string>


	<!-- Form fragment string-->
	<string name="fragment_form_edittext_hint">Somehow limited</string>
	<string name="fragment_form_button_text">Sign Up</string>


	<!-- Autocomplete string-->
	<string name="fragment_autocomplete_edittext_hint">Clever request</string>


	<!-- RetroFit fragment string -->
	<string name="fragment_retrofit_lambda_button_text">Load info - Lambda</string>
	<string name="fragment_retrofit_rxandroid_button_text">Load info - RxAndroid</string>


	<!-- Firebase string-->
	<string name="fragment_firebase_lambda_button_text">Get firebase data</string>


	<!-- Operator string-->
	<string name="fragment_operator_lambda_button_text">Run test - lambda</string>
	<string name="fragment_operator_rxandroid_button_text">Run test - classic</string>

</resources>
