<ScrollView
	android:layout_height="match_parent"
	android:layout_width="match_parent"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@android:color/white"
	>

	<LinearLayout
		android:orientation="vertical"
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:paddingTop="@dimen/activity_vertical_margin"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		tools:context=".DemoActivity"
		>

		<Button
			android:id="@+id/fragment_core_click_button"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:text="@string/fragment_core_click_button_text"
			/>

		<Button
			android:id="@+id/fragment_core_edittext_button"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:text="@string/fragment_core_edittext_button_text"
			/>

		<Button
			android:id="@+id/fragment_core_form_button"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:text="@string/fragment_core_edittext_form_text"
			/>

		<Button
			android:id="@+id/fragment_core_retrofit_button"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:text="@string/fragment_core_retrofit_button_text"
			/>

	</LinearLayout>

</ScrollView>
