<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".DemoActivity"
	>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin"
		android:background="@android:color/white"
		>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/fragment_edittext_lambda_header"
			/>

		<Button
			android:id="@+id/fragment_firebase_button_lambda"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/fragment_firebase_lambda_button_text"
			/>

		<TextView
			android:id="@+id/fragment_firebase_lambda_example_textview"
			android:layout_width="match_parent"
			android:layout_height="@dimen/textview_height"
			android:background="@android:color/black"
			android:textColor="@android:color/white"
			android:layout_marginBottom="@dimen/textview_height"
			/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/fragment_edittext_rxandroid_header"
			/>

		<TextView
			android:id="@+id/fragment_firebase_rxandroid_example_textview"
			android:layout_width="match_parent"
			android:layout_height="@dimen/textview_height"
			android:background="@android:color/black"
			android:textColor="@android:color/white"
			android:layout_marginBottom="@dimen/textview_height"
			/>


	</LinearLayout>

	<ProgressBar
		android:id="@+id/fragment_firebase_example_progress"
		style="?android:attr/progressBarStyleLarge"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_centerVertical="true"
		android:visibility="gone"/>

</RelativeLayout>